added w6 task
