# routers/index.js
@@ -8,6 +8,8 @@ router.get('/', (req, res) => {
 
 router.use('/user', require('./user'));
 router.use('/groceries', require('./groceries'));
+router.use('/clothes', require('./clothes'));
+router.use('/electronics', require('./electronics'));
 
 
 module.exports = router;
